--- a/.github/workflows/psalm.yml
+++ b/.github/workflows/psalm.yml
@@ -3,10 +3,10 @@ name: Psalm Security Scan (SARIF & JSON Reports)
 on:
   push:
     branches:
-      - next
+      - master
   pull_request:
     branches:
-      - next
+      - master
   schedule:
     - cron: '16 22 * * 1'
 
